--- a/public/css/customer/customer-navbar.css
+++ b/public/css/customer/customer-navbar.css
@@ -30,6 +30,18 @@ header{
     top: 0;
     left: 0;
 }
+
+.hero{
+    width: 100%;
+    max-height: 1vh;
+    position: absolute;
+    color: white;
+}
+
+.hero h3{
+    text-align: right;
+}
+
 .container{
     background-color: black;
     width: 100%;
