--- a/public/css/deliveryPerson/deliveryPerson-availability.css
+++ b/public/css/deliveryPerson/deliveryPerson-availability.css
@@ -48,7 +48,7 @@
       justify-content: space-between;
       /* border: 2px solid yellow;*/
 } 
-.click-available > div{
+/* .click-available > div{
     border-radius:  10px;
     padding :10px 15px;
     border: 2px solid rgb(255,138,0);
@@ -64,33 +64,35 @@
 }
 .click-available > div> a:hover{
       color: white
+} */
+/* input[type="radio"] {
+    display: none;
+} */
+button{
+	padding: 10px;
+	background-color: transparent;
+	transition: 0.3s ease-in-out;
+    border-radius:  10px;
+    border: 2px solid rgb(255,138,0);
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: bold;
+    transition-duration: 0.4s;
+    cursor: pointer;
 }
-/* #available,#not-available{
-      display: none;
-      border: 2px solid #ff9900;
-      box-shadow: 2px 1px rgba(255, 137, 0,1);
-      justify-content: space-around;
-      flex-direction: column;
-      align-items: center;
-      margin: 5% 32%;
-      padding: 30px;
-      width: 40%;
-      height: 25vh;
-      color: black;
-      font-weight: bold;
-      font-size: 20px;
-      text-align: center;
-} */
-/* .confirm-btn{
-      border: 2px solid rgba(255, 138, 0, 0.8);
-      box-shadow: 2px 1px rgba(255, 137, 0,1);
-      width: 42%; 
-      height:150px;
-      top: 30px; 
-      margin: 10px;
-      text-align: center; 
-      text-decoration: none;   
-} */
+
+button:hover{
+	background-color: rgb(255,138,0);
+	color: white;
+}
+button a{
+	color: black;
+	transition: 0.3s ease-in-out;
+}
+button:hover a{
+	color: white;
+}
 
 @media(max-width:787px){
       .available-body h2,.availability-selection a{
