--- a/public/css/branchManager/menu.css
+++ b/public/css/branchManager/menu.css
@@ -5,7 +5,7 @@
     font-family: 'Montserrat', sans-serif;
 }
 .container-1{
-    font-size: 14px;
+    /* font-size: 14px; */
     min-height: 60vh;
 }
 
