--- a/public/css/branchManager/orderDetails.css
+++ b/public/css/branchManager/orderDetails.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 .container-1{
-    font-size: 14px;
+    /* font-size: 14px; */
     min-height: 100vh;
     /* background-color: aqua; */
 }
