--- a/public/css/branchManager/orders.css
+++ b/public/css/branchManager/orders.css
@@ -5,7 +5,7 @@
     margin-top: 25px;
 }
 .container-1{
-    font-size: 14px;
+    /* font-size: 14px; */
     min-height: 100vh;
     margin-top: 20px;
     /* background-color: aqua; */
@@ -26,7 +26,7 @@
 .overview-container{
     display: flex; 
     flex-wrap: wrap; 
-    margin-right: 150px; 
+    /* margin-right: 150px;  */
 }
 
 .box{
