--- a/public/css/deliveryPerson/deliveryPerson-deliveries.css
+++ b/public/css/deliveryPerson/deliveryPerson-deliveries.css
@@ -49,6 +49,9 @@
     margin-top: 10px;
     margin-left: 0;
 }
+.delivery-body .row .col h1 a{
+    color: #000000;
+}
 .delivery-body .cal-table{
     margin-top: 50px;
     margin-left: 100px;
@@ -133,6 +136,10 @@
 .delivery-container .sub-container1 .sub-container2 .answer{
     border-bottom: 1px solid black;
 }
+ #accepted_button{
+    opacity: 0.8;
+    cursor: not-allowed;
+}
 button{
 	padding: 10px;
 	background-color: transparent;
@@ -158,7 +165,8 @@ button a{
 button:hover a{
 	color: white;
 }
-.delivery-container .reject:hover{
+
+.delivery-container .reject_button:hover{
     background: red;
 }
 .delivery-container .complete{
