--- a/public/css/owner/owner-dashboard.css
+++ b/public/css/owner/owner-dashboard.css
@@ -119,3 +119,18 @@ img {
     grid-template-columns: auto;
   }
 }
+
+@media (min-device-width:1000px) {
+   
+  #mySidebar {width: 300px;} 
+  #body {margin-left: 305px;}
+ #bakeId {margin-left: 23%;}
+ /* #logo-name__icon_left{display: block;} */
+ #logo-name__icon{display: none;}
+}
+@media (min-device-width:1100px) {
+ 
+
+#bakeId {margin-left: 15%;}
+
+}
