--- a/public/css/bakery_manager/bakery-manager-header.css
+++ b/public/css/bakery_manager/bakery-manager-header.css
@@ -212,3 +212,53 @@ a{
      80% { opacity:1; transform: translateX(-2vw); }  
     100% { opacity:0; transform: translateX(-4vw); } 
   }
+
+   
+  .logo-name__button {
+    /* position: absolute;
+    top: 50%;
+    right: 0; */
+    margin-top: 35px;
+    margin-left: 30px;
+    margin-bottom: 0;
+    transform: translateY(-50%);
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+   
+  }
+  #logo-name__icon {
+   color: white;
+   font-size: 20px;
+   display: block;
+  }
+  .logo-name__button_left{
+    margin-top: 0;
+    margin-left: 240px;
+    transform: translateY(-50%);
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    transition: 0.5s;
+
+  }
+  #logo-name__icon_left{
+    color: white;
+    font-size: 20px;
+    display: none;
+  }
+    /*responsive*/
+    @media (min-device-width:1000px) {
+   
+        #mySidebar {width: 300px;} 
+        #body {margin-left: 305px;}
+       #bakeId {margin-left: 23%;}
+       /* #logo-name__icon_left{display: block;} */
+       #logo-name__icon{display: none;}
+    }
+    @media (min-device-width:1100px) {
+       
+      
+     #bakeId {margin-left: 15%;}
+     
+    }
