--- a/public/css/customer/customer-orderdetails.css
+++ b/public/css/customer/customer-orderdetails.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Merienda&family=Montserrat&family=Roboto:wght@300&display=swap');
+*{
+  font-family: 'Montserrat', sans-serif;
+}
 section{
 	width: 100%;
 	height: 100vh;
@@ -235,3 +239,76 @@ section{
 
 
 /*Buttons Ends*/
+
+
+
+/*pop up model starts*/
+
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  transition: 200ms ease-in-out;
+  border: 1px solid rgba(255, 138, 0,0.5);
+  border-radius: 10px;
+  z-index: 10;
+  background-color: white;
+  width: 500px;
+  max-width: 80%;
+}
+
+.modal.active {
+  transform: translate(-50%, -50%) scale(1);
+}
+
+.modal-header {
+  padding: 10px 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /*border-bottom: 1px solid rgb(255, 138, 0);*/
+}
+
+.modal-header .title {
+  font-size: 1.6rem;
+  font-weight: bold;
+}
+
+.modal-header .close-button {
+  cursor: pointer;
+  border: none;
+  outline: none;
+  background: none;
+  font-size: 2rem;
+  font-weight: bold;
+  transition: 0.3s ease-in-out;
+}
+
+.modal-header .close-button:hover{
+	color: red;
+}
+
+.modal-body {
+  padding: 10px 15px;
+}
+
+#overlay {
+  position: fixed;
+  opacity: 0;
+  transition: 200ms ease-in-out;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, .5);
+  pointer-events: none;
+}
+
+#overlay.active {
+  opacity: 1;
+  pointer-events: all;
+}
+
+/*pop up model ends*/
+
