--- a/public/css/customer/customer-orderdetails.css
+++ b/public/css/customer/customer-orderdetails.css
@@ -253,7 +253,7 @@ section{
   border: 1px solid rgba(255, 138, 0,0.5);
   border-radius: 10px;
   z-index: 10;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.9);
   width: 500px;
   max-width: 80%;
 }
