--- a/public/css/deliveryPerson/deliveryPerson-reveiws.css
+++ b/public/css/deliveryPerson/deliveryPerson-reveiws.css
@@ -58,7 +58,7 @@
         align-items: center;
     }
     .reviews-body .row{
-        flex-direction: column;
+        /* flex-direction: column; */
         margin-top: 10px;
         margin-left: 10px;
         flex-wrap: nowrap;
@@ -66,8 +66,8 @@
     .reviews-body .row .col{
         width: 70%;
         margin-bottom: 10px;
-        margin-left: 73px;
     }
+
     .reviews-body #table-caption{
         margin-left: 22%;
     }
