--- a/public/css/owner/owner-header.css
+++ b/public/css/owner/owner-header.css
@@ -214,3 +214,81 @@ a{
      80% { opacity:1; transform: translateX(-2vw); }  
     100% { opacity:0; transform: translateX(-4vw); } 
   }
+
+  /* Responsive */
+@media (max-width: 700px) {
+    .header-container{
+      width: 100%;
+      font-size: 15px;
+    }
+    .header-container .bake-it{
+      font-size: 15px;
+      padding-left: 20px;
+    }
+    .header-container .header-icons{
+        justify-content: space-between;
+        flex-grow: 1;
+        padding-right: 20px;
+    }
+    .header-container .header-icons span{
+        margin-right: 10px;
+    }
+    .header-container .header-icons .text,.header-container .header-icons .sign-out{
+        display: none;
+    }
+    .side-toggle{
+        display: block;
+    }
+    .container {
+        position: absolute;
+        top: 0; 
+        width: 0%;
+        height: 0;
+        background-color: rgb(0, 0, 0);
+    }
+    .container .navigation{
+        display: none;
+        width: 100%;
+        height: auto;
+        margin-top: 7vh;
+        background-color: rgb(10 10 10 / 76%);
+    }
+    .container .navigation ul{
+        top: 0%;
+    }
+    .container .navigation ul li{
+        margin-top: 0%;
+        z-index: 10000;
+    }
+    .container .navigation ul .logout{
+        display: block;
+    }
+    
+    #body{
+        margin-left: 0%;
+    }
+    /* .side-toggle .fa-bars{
+        color: white;
+    } */
+    
+  }
+  
+  @media (max-width: 500px) {
+    .header-container{
+        width: 100%;
+      }
+  }
+
+  /*notification Panel css*/
+  .notifi-container{
+    display: none;
+    width: 300px;
+    height: 5vh;
+    opacity: 0;
+    position: absolute;
+    color: black;
+    background-color: whitesmoke;
+    border: 2px solid rgb(255,138,8);
+    transition: 1s opacity, 250ms height;
+}
+  
