--- a/public/css/owner/owner-report.css
+++ b/public/css/owner/owner-report.css
@@ -37,7 +37,69 @@
   font-weight: 700;
   margin-bottom: 10px;
 }
-/* .report-selection .condition select { */
+.timeSelection{
+  margin-top: 15px;
+  margin-right: 10px;
+  display: grid;
+  grid-auto-flow: column;
+  grid-gap: 10px;
+}
+.timeSelection .subTimeSelection{
+  display: flex;
+  flex-direction: column;
+  flex-grow: 10px;
+}
+.timeSelection .subTimeSelection .reportType{
+  margin-bottom: 10px;
+  font-size: 20px;
+  font-weight: 700;
+}
+.timeSelection .subTimeSelection .selectDate,
+.timeSelection .subTimeSelection .selectWeek,
+.timeSelection .subTimeSelection .selectMonth,
+.timeSelection .subTimeSelection .selectYear{
+  margin: 5px;
+  border-bottom: 1px solid rgb(255,138,0);
+  font-weight: 500;
+  color: rgb(103, 107, 107);
+}
+select{
+  width: 100%;
+  background-color: white;
+  border: none;
+  padding: 10px 0;
+  outline: none;
+}
+input {
+  width: 100%;
+  background-color: white;
+  border: none;
+  padding: 10px 0;
+  outline: none;
+}
+.reportTopic{
+  display: flex;
+  flex-direction: column;
+  font-size: 20px;
+  font-weight: 600;
+  padding: 10px;
+
+}
+.reportTopic .selectedTimePeriod{
+  display: flex;
+  flex-direction: row;
+  padding: 10px;
+  margin: 15px;
+  
+}
+.reportTopic .selectedTimePeriod .subReportTopic{
+  margin: 15px;
+} 
+.reportTopic .selectedTimePeriod .subReportTopic span{
+  font-weight: 200;
+  
+}
+/* .report-selection .condition select {
   select{
     width: 100%;
     background-color: white;
@@ -64,7 +126,7 @@
 }
 
 .report-selection .condition .time-selection label div:last-child{
-    /* margin-left: 70px; */
+    /* margin-left: 70px; 
     display: flex;
     justify-content: flex-end; 
     align-items: center;
@@ -73,7 +135,7 @@
 }
   
 .report-selection .condition .time-selection .sub-time-selection{
-     /* display: grid; */
+     /* display: grid; 
      display: none;
      grid-template-columns: 100px 150px 120px auto;  
      grid-gap: 40px;
@@ -95,13 +157,10 @@
 }
 .report-selection .condition .time-selection  .sub-time-selection .time-dropdown select{
 
-}
-
-.report-selection .generate-btn{
-  display: flex;
-  justify-content: flex-end;
-}
-.report-selection .generate-btn button{
+} */
+input[type="submit"]{
+    width: fit-content;
+    margin-left: 60%;
     border-radius: 10px;
     background-color: white;
     padding: 10px 15px;
@@ -112,10 +171,11 @@
     transition-duration: 0.4s;
     cursor: pointer;
     font-weight: bold;
+
 }
-.report-selection .generate-btn button:hover{
-  color: white;
-  background-color:rgb(255,138,0);
+input[type="submit"]:hover{
+	background-color: rgba(255, 138, 0,0.7);
+	color: white;
 }
 
 /*this is done to expand the height view*/
