--- a/public/css/customer/customer-navbar.css
+++ b/public/css/customer/customer-navbar.css
@@ -191,6 +191,25 @@ nav{
     color: rgb(255, 137, 0);
 }
 
+.user-icons a span {
+    font-size: 12px;
+    line-height: 14px;
+    /*background: #F68B1E;*/
+    background: transparent;
+    padding: 2px;
+    /*border: 1px solid #fff;*/
+    border: 2px solid rgb(256, 138, 0);
+    border-radius: 50%;
+    /*position: absolute;*/
+    /*top: -1px;*/
+    /*left: 13px;*/
+    color: #fff;
+    right: 20px;
+    /*width: 20px;
+    height: 20px;*/
+    text-align: center;
+    }
+
 .pagename{
     width: 80%;
     /*background-color: red;*/
