--- a/public/css/bakery_manager/bakery-manager-pending-order.css
+++ b/public/css/bakery_manager/bakery-manager-pending-order.css
@@ -30,16 +30,17 @@ body{
   }
   
   .table{
-    width: 100%;
+    width: 80%;
     height: 80vh;
     margin-left: 100px;
     margin-top:30px ;
     padding: 0;
+  
   }
 .content-table{
     
     /* position: absolute; */
-    width: 64%; 
+    width: 70%; 
     height: 190px;
     /* left: 20%;
     top: 170px; */
@@ -61,6 +62,7 @@ body{
 }
 .content-table tbody tr{
     text-align: center;
+    height: 25px;
     /* cursor: pointer; */
     
 }
@@ -85,5 +87,6 @@ body{
 
 .content-table tbody tr a{
     color: rgb(255, 138, 0);
+  
   }
   
