--- a/public/css/cashier/cashier-header.css
+++ b/public/css/cashier/cashier-header.css
@@ -217,6 +217,7 @@ a{
      80% { opacity:1; transform: translateX(-2vw); }  
     100% { opacity:0; transform: translateX(-4vw); } 
   }
+  /*responsive*/
   @media (min-device-width:1000px) {
    
     #mySidebar {width: 300px;} 
@@ -224,10 +225,10 @@ a{
    #bakeId {margin-left: 23%;}
    /* #logo-name__icon_left{display: block;} */
    #logo-name__icon{display: none;}
-  }
-  @media (min-device-width:1100px) {
+}
+@media (min-device-width:1100px) {
    
   
-  #bakeId {margin-left: 15%;}
-  
-  }
+ #bakeId {margin-left: 15%;}
+ 
+}
