--- a/public/css/owner/owner-add-item.css
+++ b/public/css/owner/owner-add-item.css
@@ -25,6 +25,11 @@ body{
     font-size: 14px;
 
 }
+.main-section{
+    width: 130%;
+    display: flex;
+    flex-direction: row;
+}
 .left-section{
     width: 40%;
 }
