--- a/public/css/owner/owner-menu-items.css
+++ b/public/css/owner/owner-menu-items.css
@@ -10,7 +10,7 @@ body{
     padding: 0;
     margin: 0%;
     width: 100%;
-    height: 110%;
+    height: 115%;
     font-family: 'Montserrat', sans-serif;
     /* background-color: #bdba04; */
     
@@ -24,7 +24,7 @@ body{
     margin: 0;
     margin-top: 20px;
     width: 79%;
-    height: 80vh;
+    height: 105vh;
     display: flex;
     flex-direction:column;
     /* background-color: chartreuse; */
@@ -42,21 +42,21 @@ body{
 
 
 .category-table{
-    /* display: none; */
     margin-left: 100px;
+    margin-bottom: 20px;
+    width: 80%; 
+
 }
 
   
 .content-table{
-    
-    width: 50%; 
-    height: 190px;
+    width: 80%; 
     margin-top: 5px;
     border-collapse: collapse;
     min-width: 900px;
     /* border-radius:5px 5px 0 0 ; */
     overflow:hidden ; 
-    /* box-shadow: 0 0 20px rgb(0, 0,0,0.15); */
+    /* box-shadow: 0 0 20px rgb(0, 0,0,0.15); */   
 
 }
 .content-table thead tr {
@@ -66,15 +66,36 @@ body{
     font-weight: bold;
     height: 40px;
 }
-.content-table tbody tr{
+
+.scroll-of-table {
+    width: 100%; 
+    max-height: 50vh;
+    overflow-y: scroll;
+}
+.scroll-of-table .content-table tbody tr{
     text-align: center;
     
 }
+.scroll-of-table .content-table tbody tr td{
+    width: 30%;
+
+}
+
+.content-table thead tr th:nth-child(1){
+   width: 30%;
+}
+.content-table thead tr th:nth-child(2){
+    width: 30%;
+ }
+ .content-table thead tr th:nth-child(3){
+    width: 30%;
+ }
 .content-table th .content-table tr{
     padding: 12px, 15px;
 }
 .content-table tbody tr{
     border-bottom: 1px solid #dddddd;
+    height: 30px;
     /* cursor: pointer; */
 }
 /* .content-table tbody tr:hover{
@@ -93,13 +114,11 @@ body{
     width: 15px;
     height: 15px;
 }
-.btn{
-    display:flex;
-    flex-direction: row;
-}
+
 .delete-btn{
     margin-top: 40px;
-    margin-left: 20px;
+    margin-left: 120px;
+    position: absolute;
     display: none;
 }
 .delete-btn button{
@@ -118,6 +137,9 @@ body{
    
 }
 .add-item-btn{
+    position: absolute;
+
+    margin: 0;
     margin-top: 40px;
   
 }
