--- a/public/css/owner/owner-raw-materials.css
+++ b/public/css/owner/owner-raw-materials.css
@@ -9,16 +9,16 @@ body{
   padding: 0;
   margin: 0%;
   width: 100%;
-  height: 110%;
+  height: 115%;
   font-family: 'Montserrat', sans-serif;
  
   
 }
 .rawMaterials-body{
-    min-height: 100vh;
+    min-height: 110vh;
 }
 .middle-section{
-    max-height: 40vh;
+    max-height: 45vh;
     font-size: 14px;
     margin-left: 100px;
 }
@@ -41,7 +41,7 @@ body{
  .topic{
     margin: 20px;
     margin-left: 4px;
-    margin-top: 60px;
+    margin-top: 50px;
     height: auto;
     /* background-color: blue; */
 }
@@ -78,7 +78,7 @@ body{
   }
 
  .inventory{
-    width: 64%; 
+    width: 69%; 
     border-collapse: collapse;
     margin-top: 10px;
     min-width: 546px;
@@ -105,9 +105,9 @@ body{
 
 #dataTable{
     text-align: center; 
-    width: 64.7%; 
+    width: 69.75%; 
     border-collapse: collapse;
-    margin-top: 10px;
+    margin-top: 5px;
     /* min-width: 546px; */
     /* border-radius:5px 5px 0 0 ; */
     overflow:hidden ; 
@@ -137,6 +137,7 @@ body{
     /* background-color: steelblue; */
     max-height: 400px;
     overflow-y: scroll;
+    
 }
 
 #Check-box{
@@ -154,7 +155,7 @@ body{
     cursor: pointer;
     border: 1px solid rgb(255, 138, 0);
     background-color: white;
-    margin-left: 52%;
+    margin-left:40px;
     align-items: center;
 }
 
@@ -164,26 +165,27 @@ body{
      color: white; 
 }
 .del-row{
-    /* width: 90px;
-    height: 30px; */
-    padding: 10px;
+    width: 90px;
+    height: 40px;
+    /* padding: 10px; */
     font-weight:bold;
     border-radius: 10px;
     cursor: pointer;
     border: 1px solid rgb(255, 138, 0);
     background-color: white;
     margin-top: 10px;
+    text-align: center;
 }
 .del-row:hover{
     color: white;
     background-color: rgb(255, 138, 0);
 }
 .save-btn{
-    margin-left: 60%;
-    margin-top: 50px;
+    margin-left: 64%;
+    margin-top: 4px;
     padding: 10px;
-    padding-left: 15px;
-    padding-right: 15px;
+    /* padding-left: 15px; */
+    /* padding-right: 15px; */
     /* width: 90px;
     height: 30px; */
     font-weight:bold;
@@ -213,4 +215,71 @@ body{
     background-color: rgb(255, 138, 0);
 }
 
+.addDatafrom{
+    width: 500px;
+    height: 400px;
+    position: absolute;
+    top: 40vh;
+    left: 40%;
+    background-color: #eeeeee;
+    border-radius: 10px;
+    align-items: center;
+    display: none;
+}
+.input-fileds{
+    display: flex;
+    flex-direction: column;
+}
+.input-fileds input{
+    width: 80%;
+    height: 30px;
+    float: left;
+    background-color:white;
+    border: none;
+    border-bottom: 2px solid darkgrey;
+    outline: none;
+    border-radius: 0;
+    margin-top: 5px;
+    margin-left: 30px;
+    /* margin-left:10px ; */
 
+}
+.input-fileds label{
+    margin-right: 65px;
+    font-size: 15px;
+    font-weight:bold;
+    margin-top: 15px;
+    margin-left: 30px;
+
+
+}
+.save-btn-popup{
+    margin-top: 20px;
+    width: 90px;
+    height: 30px;
+    font-weight: bold;
+    border-radius: 10px;
+    cursor: pointer;
+    border: 1px solid rgb(257, 138, 0);
+    background-color: white;
+    margin-bottom: 2px;
+    margin-top: 3px;
+    margin-left: 30px;
+}
+.save-btn-popup:hover{
+    background:rgb(257, 138, 0);
+    color: rgb(255, 255, 255);
+}
+#measure_unit{
+    width: 80%;
+    border: none;
+    border:nth-child 1px solid rgb(255, 138, 0);
+    box-shadow: 0px 1px rgb(255, 138, 0);
+    padding: 10px;
+    color:back;
+    font-weight: bold;
+    margin-top: 10px;
+    margin-left: 30px;
+    margin-bottom: 10px;
+    outline: none;
+}
