--- a/public/css/branchManager/orders.css
+++ b/public/css/branchManager/orders.css
@@ -82,3 +82,12 @@ tbody tr:hover{
     color: rgb(255, 138, 0);
 }
 
+.orders-table{
+    
+    width: 100%;
+    /* max-height: 10px; */
+    max-height: 300px;
+    overflow-y: scroll;
+    /* background-color: aquamarine; */
+}
+
