--- a/public/css/bakery_manager/bakery-manager-daily-requirment.css
+++ b/public/css/bakery_manager/bakery-manager-daily-requirment.css
@@ -45,7 +45,7 @@ body{
 }
 
 #category1-table{
-    display: none;
+    /* display: none; */
     margin-left: 100px;
     /* margin-top:60px ; */
     padding: 0;
