--- a/public/css/bakery_manager/bakery-manager-summary.css
+++ b/public/css/bakery_manager/bakery-manager-summary.css
@@ -42,8 +42,8 @@ body{
     width: 190px;
     height: 34px;
     margin: 0;
-    margin-left: 10px;
-    margin-top: 430px;
+    margin-left: 80%;
+    /* margin-top: 430px; */
     display: none;
     /* background-color: rgb(36, 107, 168); */
     
@@ -90,7 +90,7 @@ body{
     height: 160px;
     float: left;
     margin-bottom: 2px;
-    margin-top: 10px;
+    /* margin-top: 10px; */
     margin-left: 100px;
     outline: none;
     /* background-color: #ff5a5a; */
@@ -142,19 +142,28 @@ label{
 .chart {
     width: 40%;
     height: 400px;
-     /* background-color: aquamarine; */
      margin-top: 60px;
      margin-left: -40px;
      
+}
+.select-chart{
+    width: 50%;
+    height: 450px;
+    display: flex;
+    flex-direction: column;
+    margin-top: 35px;
+    margin-left: 40px;
+
 }
 .chart2 {
     width: 30%;
     height: 250px;
      /* background-color: aquamarine; */
-     position: absolute;
-     margin-top: -280px;
-     right: 320px;
+     /* position: absolute; */
+     margin-top:15vh;
+     margin-left: 200px;
+     /* right: 320px; */
      display: block;
-     display: none;
+     /* display: none; */
      
 }
