--- a/public/css/bakery_manager/bakery-manager-summary.css
+++ b/public/css/bakery_manager/bakery-manager-summary.css
@@ -44,7 +44,7 @@ body{
     margin: 0;
     margin-left: 80%;
     /* margin-top: 430px; */
-    /* display: none; */
+    display: none;
     /* background-color: rgb(36, 107, 168); */
     
 }
