--- a/public/css/branchManager/menu.css
+++ b/public/css/branchManager/menu.css
@@ -74,6 +74,8 @@ select{
     margin-top: 30px;
     display: flex;
     justify-content: flex-start;
+    max-height: 300px;
+    overflow-y: scroll;
     /* background-color: chartreuse; */
 }
 
