--- a/public/css/owner/owner-raw-materials.css
+++ b/public/css/owner/owner-raw-materials.css
@@ -217,7 +217,7 @@ body{
 
 .addDatafrom{
     width: 500px;
-    height: 400px;
+    height: 300px;
     position: absolute;
     top: 40vh;
     left: 40%;
@@ -254,7 +254,7 @@ body{
 
 }
 .save-btn-popup{
-    margin-top: 20px;
+    /* margin-top: 20px; */
     width: 90px;
     height: 30px;
     font-weight: bold;
@@ -264,7 +264,7 @@ body{
     background-color: white;
     margin-bottom: 2px;
     margin-top: 3px;
-    margin-left: 30px;
+    margin-left: 68%;
 }
 .save-btn-popup:hover{
     background:rgb(257, 138, 0);
@@ -283,3 +283,16 @@ body{
     margin-bottom: 10px;
     outline: none;
 }
+.fa-times{
+    margin-left: 95%;
+    margin-top: 4px;
+    font-size: 16px;
+    cursor: pointer;
+    color: black;
+
+}
+.fa-times:hover{
+    color: rgb(255, 138, 0);
+    
+}
+
