--- a/public/css/customer/customer-specialMenu.css
+++ b/public/css/customer/customer-specialMenu.css
@@ -43,6 +43,11 @@ section{
 	color: rgb(255, 138, 0);
 }
 
+.side-panel ul li .selected{
+	font-weight: bold;
+	color: rgba(255, 138, 0,0.8);
+}
+
 
 .burger-container{
 	margin: 5rem 0;
