--- a/public/css/bakery_manager/bakery-manager-summary.css
+++ b/public/css/bakery_manager/bakery-manager-summary.css
@@ -10,7 +10,7 @@ body{
     padding: 0;
     margin: 0%;
     width: 100%;
-    height: 110%;
+    height: 125%;
     font-family: 'Montserrat', sans-serif;
     
 }
@@ -20,7 +20,7 @@ body{
 }
 .content{
     width: 100%;
-    height: 80vh;
+    height: 90vh;
     
 }
 .summary-topic {
@@ -42,10 +42,8 @@ body{
     width: 190px;
     height: 34px;
     margin: 0;
-    margin-left: 80%;
-    /* margin-top: 430px; */
-    display: none;
-    /* background-color: rgb(36, 107, 168); */
+    margin-left: 1%;
+
     
 }
 #button{
@@ -82,14 +80,7 @@ body{
 }
 
 .drop-down-btn-div{
-    /* position:absolute;
-    top: 19vh;
-    */
-    display: flex;
-    width:30%;  
-    height: 160px;
-    float: left;
-    margin-bottom: 2px;
+  
     /* margin-top: 10px; */
     margin-left: 100px;
     outline: none;
@@ -135,8 +126,9 @@ label{
 .chart-body{
     display: flex;
     flex-direction: row;
+    margin: 0;
     margin-left: 9px;
-    height: 450px;
+    height: 500px;
     /* background-color: red; */
 }
 
@@ -146,11 +138,35 @@ label{
     display: flex;
     flex-direction: column;
 
-
 } 
 .chart1 {
     width: 48%;
-    height: 440px;
+    height: 340px;
+    margin-top: 130px;
+
+    flex-grow: 1;
+    margin-right: 30px;
+    padding: 10px;
+    border: 2px solid #ff9900;
+    box-shadow: 0 1px 5px rgb(104 104 104 / 80%);
+     /* background-color: aquamarine; */
+     display: block;
+     /* display: none; */
+     
+}
+#myChart2{
+    margin: 0;
+}
+.chart2 {
+    width: 97%;
+    height: 340px;
+    margin-top: 65px;
+
+    /* flex-grow: 1; */
+    /* margin-right: 30px; */
+    padding: 10px;
+    border: 2px solid #ff9900;
+    box-shadow: 0 1px 5px rgb(104 104 104 / 80%);
      /* background-color: aquamarine; */
      display: block;
      /* display: none; */
