--- a/public/css/branchManager/dailyRequirement.css
+++ b/public/css/branchManager/dailyRequirement.css
@@ -10,7 +10,7 @@
 
 .menu{
     margin-top: 75px;
-    width: 100%;
+    width: 90%;
     /* background-color: aqua; */
     display: flex;
     flex-direction: column;
@@ -29,14 +29,14 @@
 }
 
 .drop-down-btn-container{
-    width: 50%;
+    width: 90%;
     /* height: 60px; */
     display: flex;
     flex-direction: column;
     /* background-color: brown; */
     align-items:left;
     /* border:3px solid red; */
-    /* margin-bottom: 10px; */
+    margin-bottom: 30px;
 }
 
 .drop-down{
@@ -45,7 +45,7 @@
 }
 
 select{
-    width: 50%;
+    width: 90%;
 }
 
 .view-btn-container{
@@ -62,7 +62,10 @@ select{
 } */
 
 .menu-table{
-    visibility: hidden;
+    /* visibility: visible; */
+    width: 90%;
+    max-height: 300px;
+    overflow-y: scroll;
     
 }
 .menu-table-active{
@@ -91,9 +94,9 @@ input[type="number"]:disabled {
   }
 
 table{
-    width: 50%;
+    width: 100%;
     border-collapse: collapse;
-    margin-top: 30px;
+    /* margin-top: 30px; */
 }
 
 table td{
@@ -144,7 +147,7 @@ img{
 
 .btn-container{
     /* height: 60px; */
-    width: 50%;
+    width: 90%;
     margin-top: 40px;
     margin-bottom: 10px;
     display: flex;
@@ -159,7 +162,7 @@ img{
 }
 
 .edit-btn{
-    visibility: hidden;
+    visibility: visible;
 }
 
 button{
