--- a/public/css/bakery_manager/bakery-manager-daily-requirment.css
+++ b/public/css/bakery_manager/bakery-manager-daily-requirment.css
@@ -9,7 +9,7 @@ body{
     padding: 0;
     margin: 0%;
     /* width: 100%; */
-    height: 110%;
+    height: 110vh;
     font-family: 'Montserrat', sans-serif;
     
 }
@@ -36,8 +36,6 @@ body{
 }
 .content{
     margin: 0;
-    /* margin-left: 7%;
-    margin-top: 4.5%; */
     width: 88%;
     height: 80vh;
     /* display: flex;    */
@@ -45,17 +43,20 @@ body{
 }
 
 #category1-table{
-    /* display: none; */
+  
     margin-left: 100px;
-    /* margin-top:60px ; */
     padding: 0;
+    width: 88%; 
+    max-height: 60vh;
+    overflow-y: scroll;
+
 }
   
 .content-table{
     
    
     width: 50%; 
-    height: 190px;
+    height: 190px; 
     border-collapse: collapse;
     margin: 25px, 0;
     min-width: 900px;
@@ -73,6 +74,9 @@ body{
 }
 .content-table tbody tr{
     text-align: center;
+    height: 30px;
+    
+
     
 }
 .content-table th .content-table tr{
