--- a/public/css/deliveryPerson/deliveryPerson-deliveries.css
+++ b/public/css/deliveryPerson/deliveryPerson-deliveries.css
@@ -60,6 +60,7 @@
     flex-wrap: nowrap;
     justify-content: flex-start; */
     display: flex;
+    flex-direction: column;
     flex-wrap: wrap;
     margin-right: 150px;
     margin-left: 100px;
@@ -73,6 +74,7 @@
     border: none;
     padding: 10px 0;
     outline: none;
+    /* border: 2px solid red; */
 }
 .delivery-body .cal-table .delivery-calander .selectDate{
     display: flex;
@@ -81,6 +83,11 @@
     border-bottom: 1px solid rgb(255,138,0);
     font-weight: 500;
     color: rgb(103, 107, 107);
+    /* border: 2px solid black; */
+}
+.delivery-body .cal-table .delivery-calander .calander-submit input[type="submit"]{
+    /* border: 2px solid blue; */
+    margin-left: 13%;
 }
 input {
     width: 100%;
@@ -91,7 +98,7 @@ input {
 }
 input[type="submit"] {
     width: fit-content;
-    margin-left: 60%;
+    margin-left: 76%;
     border-radius: 10px;
     background-color: white;
     padding: 10px 15px;
@@ -363,6 +370,9 @@ button:hover a{
 	}
     .cal-table .delivery-calander{
         padding: 20px;
+    }
+    input[type="submit"]{
+        margin-left: -81%;
     }
     /* .overview-body .row .col{
         /* width: 88%; 
