--- a/public/css/deliveryPerson/deliveryPerson-deliveries.css
+++ b/public/css/deliveryPerson/deliveryPerson-deliveries.css
@@ -227,6 +227,9 @@ button a{
 button:hover a{
 	color: white;
 }
+table tbody tr td .click-more-details a:hover{
+    color: white;
+}
 
 .delivery-container .reject_button:hover{
     background: red;
@@ -238,75 +241,8 @@ button:hover a{
 .accept_button_after_checking{
     margin-left: 30px;
 }
-.radio-box{
-	width: 80%;
-	/*margin-left: 15rem;*/
-	margin: 0 0 0 15rem;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	align-items: flex-start;
-}
-.radio-box div{
-	width: 40%;
-	display: flex;
-	justify-content: space-between;
-}
-.radio-box h3{
-	margin-bottom: 2rem;
-}
-.radio-box label input{
-	display: none;
-}
-.radio-box label {
-	display: block;
-	cursor: pointer;
-	margin-bottom: 3rem;
-	padding-left: 3.5rem;
-	position: relative;
-}
-.radio-box label .circle{
-	height: 3rem;
-	width: 3rem;
-	border:3px solid #000000;
-	border-radius: 50%;
-	display: inline-block;
-	position: absolute;
-	left:0;
-	top:-5px;
-	transition: border-color .5s ease;
-}
-.radio-box label .circle::before{
-	content: '';
-	height: 1.5rem;
-	width: 1.5rem;
-	background-color: #ff8900;
-	position: absolute;
-	left:0;
-	top:0;
-	border-radius: 50%;
-	box-sizing: border-box;
-	margin-left:0.45rem;
-	margin-top:0.45rem;
-	transition: transform .5s ease;
-	transform: scale(0);
-}
-.radio-box label span{
-	font-size: 1.4rem;
-	color:#000000;
-	display: inline-block;
-	text-transform: uppercase;
-	transition:color .5s ease;
-}
-.radio-box label input:checked + .circle{
-	border-color:#ff9800;
-}
-.radio-box label input:checked + .circle::before{
-	transform: scale(1);
-}
-.radio-box label input:checked + .circle + span{
-	color:#ff9800;
-}
+
+
 .billing-details .location-details{
 	width: 80%;
 	display: none;
@@ -327,6 +263,11 @@ button:hover a{
 
 #cash-topay{
     display: none;
+}
+#table-caption-date{
+    margin-top: 1%;
+    margin-left: 100px;
+    padding: 8px 8px 8px 0px;
 }
 
 
