--- a/public/css/bakery_manager/bakery-manager-summary.css
+++ b/public/css/bakery_manager/bakery-manager-summary.css
@@ -10,7 +10,7 @@ body{
     padding: 0;
     margin: 0%;
     width: 100%;
-    height: 125%;
+    height: 125vh;
     font-family: 'Montserrat', sans-serif;
     
 }
@@ -23,20 +23,34 @@ body{
     height: 90vh;
     
 }
-.summary-topic {
-    /* position: absolute;
-    top: 14vh;
-    left: 38%; */
+.main-topic{
+    position: absolute;
+    top:13vh;
+    left: 25%;
     width: 40%;
     height: 50px;
-    font-size: 20px;
+    font-size: 22px;
     font-weight: bold;
-    /* background-color: aqua; */
-    margin-left: 100px;
-    margin-top:30px ;
+    padding: 0;  
+}
+.summary-topic {
+    position: absolute;
+    top: 26vh;
+    left: 25%;
+    width: 40%;
+    height: 50px;
+    font-size: 17px;
+    font-weight: bold;
     padding: 0;
 
     
+}
+.topic-selected{
+    position: absolute;
+    top: 12vh;
+    right: 18%;
+    font-size: 17px;
+    font-weight: bold;
 }
 .get-summary-btn{
     width: 190px;
@@ -128,6 +142,7 @@ label{
     flex-direction: row;
     margin: 0;
     margin-left: 9px;
+    margin-top: 80px;
     height: 500px;
     /* background-color: red; */
 }
