--- a/public/css/owner/owner-menu-items.css
+++ b/public/css/owner/owner-menu-items.css
@@ -117,7 +117,7 @@ body{
 
 .delete-btn{
     margin-top: 40px;
-    margin-left: 120px;
+    margin-left: 54%;
     position: absolute;
     display: none;
 }
